--- a/functions/package.json
+++ b/functions/package.json
@@ -37,11 +37,9 @@
     "@google-cloud/functions-framework": "^3.3.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.8.1",
-    "mailtrap": "^3.3.0",
-    "nodemailer": "^6.9.13"
+    "mailtrap": "^3.3.0"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
