chore: add more granular deploy scripts

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "clean": "rm --recursive --force elm-stuff .parcel-cache",
     "clean-all": "pnpm run clean && pnpm run clean-all:dist",
     "clean-all:dist": "rm --recursive --force dist",
-    "predeploy": "pnpm run build",
-    "deploy": "firebase deploy",
+    "predeploy": "pnpm run predeploy:hosting",
+    "deploy": "pnpm run predeploy && firebase deploy",
+    "predeploy:hosting": "pnpm run build",
+    "deploy:hosting": "pnpm run predeploy:hosting && firebase deploy --only hosting",
     "postinstall": "elm-tooling install",
     "lint": "pnpm run lint:elm-format && pnpm run lint:eslint",
     "lint:elm-format": "pnpm run lint:elm-format: -- src/{,**/}*.elm",
@@ -37,6 +39,7 @@
     "lint:prettier:": "prettier --cache --check",
     "prepare": "husky",
     "release": "pnpm run deploy",
+    "release:hosting": "pnpm run deploy:hosting",
     "start": "pnpm run start:parcel-serve:watch",
     "start:doc": "pnpm run start:doc:watch",
     "start:doc:watch": "elm-doc-preview",
