--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,10 @@
     ],
     "rewrites": [
       {
+        "source": "/robots.txt",
+        "destination": "/robots.txt"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
