--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "parcel": "^2.12.0",
+    "parcel-reporter-static-files-copy": "^1.5.3",
     "postcss": "^8.4.38",
     "postcss-custom-properties": "^13.3.6",
     "postcss-import": "^16.1.0",
