--- a/functions/package.json
+++ b/functions/package.json
@@ -34,17 +34,16 @@
     "start:shell": "pnpm run build && firebase functions:shell"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.3.0",
-    "firebase-admin": "^12.1.0",
-    "firebase-functions": "^4.9.0",
+    "@google-cloud/functions-framework": "^3.4.0",
+    "firebase-admin": "^12.1.1",
+    "firebase-functions": "^5.0.1",
     "mailtrap": "^3.3.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.23",
+    "@typescript-eslint/parser": "8.0.0-alpha.23",
+    "eslint": "^9.3.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.29.1",
     "firebase-functions-test": "^3.2.0",
     "typescript": "^5.4.5"
   },
