--- a/package.json
+++ b/package.json
@@ -59,12 +59,12 @@
     "current node, > 0.5%, > 0.2% in US, last 2 versions, Firefox ESR, not dead"
   ],
   "dependencies": {
-    "firebase": "^10.11.0"
+    "firebase": "^10.12.2"
   },
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
-    "@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^8.57.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.3.0",
     "@html-eslint/eslint-plugin": "^0.24.1",
     "@html-eslint/parser": "^0.24.1",
     "@parcel/config-default": "^2.12.0",
@@ -74,55 +74,54 @@
     "@parcel/transformer-jsonld": "^2.12.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.12",
-    "@types/node": "^20.12.7",
-    "@types/webpack-env": "^1.18.4",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/node": "^20.12.13",
+    "@types/webpack-env": "^1.18.5",
+    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.23",
+    "@typescript-eslint/parser": "8.0.0-alpha.23",
     "elm": "0.19.1-6",
     "elm-tooling": "^1.15.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-editorconfig": "^4.0.3",
-    "eslint-plugin-html": "^8.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.2.3",
+    "eslint-plugin-html": "^8.1.1",
+    "eslint-plugin-jsdoc": "^48.2.7",
     "eslint-plugin-json-schema-validator": "^5.1.0",
-    "eslint-plugin-jsonc": "^2.15.1",
-    "eslint-plugin-markdown": "^4.0.1",
-    "eslint-plugin-no-secrets": "^0.9.1",
+    "eslint-plugin-jsonc": "^2.16.0",
+    "eslint-plugin-markdown": "^5.0.0",
+    "eslint-plugin-no-secrets": "^1.0.2",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-tsdoc": "^0.2.17",
-    "firebase-tools": "^13.7.3",
-    "globals": "^15.0.0",
+    "eslint-plugin-tsdoc": "^0.3.0",
+    "firebase-tools": "^13.10.2",
+    "globals": "^15.3.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
+    "lint-staged": "^15.2.5",
     "parcel": "^2.12.0",
     "parcel-reporter-static-files-copy": "^1.5.3",
     "postcss": "^8.4.38",
-    "postcss-custom-properties": "^13.3.7",
+    "postcss-custom-properties": "^13.3.10",
     "postcss-import": "^16.1.0",
     "postcss-url": "^10.1.3",
     "prettier": "^3.2.5",
     "prettier-plugin-elm": "^0.11.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "process": "^0.11.10",
-    "svgo": "^3.2.0",
+    "svgo": "^3.3.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-    "web-vitals": "^3.5.2"
-  },
-  "@parcel/transformer-css": {
-    "drafts": {
-      "customMedia": true,
-      "nesting": true
-    }
+    "web-vitals": "^4.0.1"
   },
   "pnpm": {
     "peerDependencyRules": {
       "allowedVersions": {
         "svgo": "2.8.0"
       }
+    }
+  },
+  "@parcel/transformer-css": {
+    "drafts": {
+      "customMedia": true,
+      "nesting": true
     }
   },
   "targets": {
